--- a/hw/hw.html
+++ b/hw/hw.html
@@ -13,7 +13,7 @@
 	<header>
 		<h1>Ulimate Frisbee Teams</h1>
 		<nav>
-			<a href="index.html">Home</a>
+			<a href="home.html">Home</a>
 			<a href="history.html" class = "active">Teams</a>
 			<a href="history.html">History</a>
 			<a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a>
